# rustyproxy

./: Cargo.toml  LICENSE  README.md
example/: config.toml
src/: lib.rs  main.rs
src/event/: mod.rs
src/packet/: configuration.rs  handshake.rs  login.rs  mod.rs  play.rs
src/player/: mod.rs
src/server/: mod.rs
