[package]
name = "rustyproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
azalea-chat = "0.11.0"
serde_json = "1.0.140"
serde = "1.0.219"
tokio = { version = "1.40", features = ["full"] }
toml = "0.8.20"
uuid = {version = "1.16.0", features = ["v4"]}
flate2 = "1.0"
crab_nbt = { version = "0.2.9", features = ["full"] }
